# converter

./: .gitignore  Makefile  io.github.mrvladus.Converter.json  meson.build
data/: converter.gresource.xml  io.github.mrvladus.Converter.appdata.xml.in  io.github.mrvladus.Converter.desktop.in  meson.build
data/icons/: meson.build
data/styles/: styles.css
data/ui/: window.ui
po/: POTFILES  converter.pot  meson.build  ru.po
src/: converter.gresource.xml  main.c  meson.build
src/resources/: window.ui
